<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/movie"
            android:title="@string/menu_movie" />
        <item
            android:id="@+id/nav_TVshows"
            android:icon="@drawable/tvshow"
            android:title="@string/menu_TVshows" />
        <item
            android:id="@+id/nav_Food"
            android:icon="@drawable/foods"
            android:title="@string/menu_foods" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/music"
            android:title="@string/menu_Music" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_signout" />
        </menu>
    </item>

</menu>
