<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_user_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/nav_header_desc"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>



            <TextView
                android:id="@+id/nav_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:maxLines="1"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/nav_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/nav_header_subtitle"
                android:textColor="#000"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"/>





    </LinearLayout>

    
</LinearLayout>
